move aspects to datapack registry, fix simluacrum crash